--- a/package.json
+++ b/package.json
@@ -24,12 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  "eslint-plugin-react": "7.32.2",
   "browserslist": {
     "production": [
       ">0.2%",
