--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.7",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
