--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "axios": "^1.4.0",
+    "base64-js": "^1.5.1",
     "framer-motion": "^10.12.7",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
