--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.1",
     "axios": "^1.4.0",
     "base64-js": "^1.5.1",
+    "formik": "^2.2.9",
     "framer-motion": "^10.12.7",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
@@ -27,7 +28,8 @@
     "react-type-animation": "^3.0.1",
     "redux-persist": "^6.0.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
