--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "@types/react-vertical-timeline-component": "^3.3.3",
     "axios": "^1.4.0",
     "base64-js": "^1.5.1",
     "formik": "^2.2.9",
@@ -26,6 +27,7 @@
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.0.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "redux-persist": "^6.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
