Added registration reducer and data is now being sent to backend and then to db

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_URI=http://localhost:5000/api
 REACT_APP_FILE_DOWNLOAD_URI=/files/download?id=
 REACT_APP_FILE_ID=64562d13076ab6ca01025407
+REACT_APP_REGISTER_URI=/users/register
