Added contact form and google maps to contact page

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ REACT_APP_FILE_DOWNLOAD_URI=/files/download?id=
 REACT_APP_FILE_ID=64562d13076ab6ca01025407
 REACT_APP_REGISTER_URI=/users/register
 REACT_APP_LOGIN_URI=/users/login
+REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyCI15937VQ7ToBx190MzYPL4f9FtIVdSiw
