--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-vertical-timeline-component": "^3.3.3",
     "axios": "^1.4.0",
     "base64-js": "^1.5.1",
@@ -24,7 +25,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-recaptcha-v3": "^1.10.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
