Added theme to recaptcha component

--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,7 @@
-REACT_APP_URI=http://localhost:5000
+REACT_APP_URI=https://us-central1-api-station-portfolio.cloudfunctions.net/api
 REACT_APP_FILE_DOWNLOAD_URI=/files/download?id=
-REACT_APP_FILE_ID=64562d13076ab6ca01025407
+# REACT_APP_FILE_ID=64562d13076ab6ca01025407
+REACT_APP_FILE_ID=646427941ff4e4aaab0ed5eb
 REACT_APP_REGISTER_URI=/users/register
 REACT_APP_LOGIN_URI=/users/login
 REACT_APP_LOGOUT_URI=/users/logout?id=
